--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>hola</h1>
+    <h1>guapo</h1>
+    <h1>como</h1>
+    <h1>estás</h1>
+    <h1>papu</h1>
 </body>
 </html>
